force-app/main/default/objects/Parameter__c/Parameter__c.object-meta.xml
<CustomObject>
    <description>To allow you to set the URL parameters required for API requests</description>
    <label>Parameter</label>
    <nameField>
        <label>Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>