force-app/main/default/objects/Parameter__c/fields/API_Payload_Handler__c.field-meta.xml
<CustomField>
    <fullName>API_Payload_Handler__c</fullName>
    <description>Foreign Key under a Master Detail relationship to ensure that an API Request has it&apos;s own set of Headers.</description>
    <label>API_Payload_Handler</label>
    <referenceTo>API_Payload_Handler__c</referenceTo>
    <relationshipName>Parameter</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>