force-app/main/default/objects/Parameter__c/fields/Auth_token__c.field-meta.xml
<CustomField>
    <fullName>Auth_token__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To identify the API request which is required to be performed before this linked API Request.</description>
    <label>Auth token</label>
    <referenceTo>API_Payload_Handler__c</referenceTo>
    <relationshipName>Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>