force-app/main/default/objects/Parameter__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>To provide a value for the key specified within this Header.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>